--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2005,7 +2005,7 @@ tr>td.yty_tdright {
     background-color: #ffffff !important;
 }
 .red_color{
-    color: #F05050 ;
+    color: #F05050 !important;
     font-weight: 600;
 }
 
